Fixed the size of hero slogan text, keyword overflowed earlier

--- a/website/src/css/customTheme.css
+++ b/website/src/css/customTheme.css
@@ -87,7 +87,7 @@ header h2 {
 }
 @media only screen and (min-device-width: 375px) and (max-device-width: 736px) {
   .home-splash .title {
-    font-size: 3.52rem;
+    font-size: 3.23rem;
   }
 }
 
